// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uglifyJsPlugin transforms correctly using "uglifyJsPlugin-0" data 1`] = `
"module.exports = {
    plugins: [
        new webpack.optimize.UglifyJsPlugin({
            sourceMap: true
        })
    ]
}
"
`;

exports[`uglifyJsPlugin transforms correctly using "uglifyJsPlugin-1" data 1`] = `
"module.exports = {
    devtool: \\"source-map\\",
    plugins: [
        new webpack.optimize.UglifyJsPlugin({
            sourceMap: true
        })
    ]
}
"
`;

exports[`uglifyJsPlugin transforms correctly using "uglifyJsPlugin-2" data 1`] = `
"module.exports = {
    devtool: \\"cheap-source-map\\",
    plugins: [
        new webpack.optimize.UglifyJsPlugin({
            compress: {},
            sourceMap: true
        })
    ]
}
"
`;
